--- a/public/style.css
+++ b/public/style.css
@@ -172,7 +172,7 @@ footer a{
 #modal{
     background: #ff5e84;
 
-    position: absolute;
+    position: fixed;
     top:0;
     bottom: 0;
     right: 0;
@@ -190,7 +190,7 @@ footer a{
 }
 
 #modal .content{
-    margin-top: 15%;
+    margin-top: 5%;
 
     color: white;
 }
